allow datable to listen to didi-watcher events

--- a/datatable.yml
+++ b/datatable.yml
@@ -2,7 +2,7 @@ datatable:
   head: ""
   tooltip: false
   type: table
-  class: [data]
+  class: [data, didi-watcher]
   create: datatable
   head: { class: [didi] }
   title: { class: [didi] }
