--- a/user.yml
+++ b/user.yml
@@ -377,9 +377,9 @@ list:
     - last_name: { width: 13%, class: [truncate-word] }
     - cellphone: { width: 16%, class: [truncate-word] }
     - role: { width: 10%, class: [truncate-word]  }
-    - status: { width: 7% }
-    - style
-    - actions: { width: 0%}
+    - status: { width: 7%, new: inactive }
+    - style: { new: inactive }
+    - actions: { width: 0%, new: 'expand,slide,edit'}
   expand:
     pages:
       - /user/history
@@ -397,8 +397,9 @@ list:
         - role: role.name
         - status: /if(active,'active','inactive')
         - style: /if(active,'active','inactive')
-        - actions: /if(active,'expand,slide,edit,deactivate','expand,slide,edit,activate')
+        - actions: /if(active,'expand,slide,edit,deactivate',if(password='', 'slide,edit','expand,slide,edit,activate'))  
         - active
+        - password
 
 list_all:
   name: System Users
