use specific icons not colors for google map markers

--- a/controls.yml
+++ b/controls.yml
@@ -284,10 +284,10 @@ google_icon:
 google_map:
   tag: div
   create: mapper
-  script: [/common/map.js]
   zoom: 5
   pin: blue_map_marker
-  icon_path: /
+  icon_path: $image_path
+  icon_ext: .png
   colors:
    - blue
    - green
