validate special chars in name

--- a/validators.yml
+++ b/validators.yml
@@ -147,7 +147,7 @@ must_be:
 name:
   valid:
     - at_least(2,characters)
-    - /^[\w\d'][\w\d\s'-]*$/
+    - /^[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]+$/u
     - /^((?!'').)*$/
 
 national_tel:
