--- a/app-config.yml
+++ b/app-config.yml
@@ -38,6 +38,7 @@ collections:
   session: [session,audit,token]
   billing: [rate,payment,credit,transaction,country_rate]
   document: [document]
+  trigger: [trigger,hook]
 
 
 registrar: Mukoni Software
