perform trigger hooks before and after trigger

--- a/trigger.yml
+++ b/trigger.yml
@@ -1,10 +1,17 @@
 fire:
   post:
     - foreach:
-      - collection.data: [hook, [trigger.active: 1, trigger.start_time: /<=now(), trigger.end_time: />=now(), run: before], url, method, parameters, roles, partner_type]
+      - collection.data:
+          - hook
+          - [trigger.active: 1, trigger.start_time: /<=now(), trigger.end_time: />=now(), trigger_url]
+          - triggered_url
+          - method
+          - parameters
+          - roles
+          - partner_type
       - if auth.authorized($roles,$partner_type):
           - let: $parameters
-          - if "$url" == "":
+          - if "$triggered_url" == "":
               - $method: $parameters
-          - if "$url" != "":
-              - $method: [$url,$parameters]
+          - if "$triggered_url" != "":
+              - $method: [$triggered_url,$parameters]
