--- a/trigger.yml
+++ b/trigger.yml
@@ -4,14 +4,22 @@ fire:
       - collection.data:
           - hook
           - [trigger.active: 1, trigger.start_time: /<=now(), trigger.end_time: />=now(), trigger_url]
+          - trigger
+          - trigger.entry_count
+          - trigger.maximum_entries
           - triggered_url
           - method
           - parameters
           - roles
           - partner_type
+          - entries
       - if auth.authorized($roles,$partner_type):
           - let: $parameters
           - if "$triggered_url" == "":
               - $method: $parameters
           - if "$triggered_url" != "":
               - $method: [$triggered_url,$parameters]
+          - if $entries:
+              - collection.update: [ trigger, $trigger, entry_count: /$entry_count+$entries]
+              - if $entry_count+$entries >= $maximum_entries:
+                  - collection.update: [ trigger, $trigger, active: 0]
