--- a/trigger.yml
+++ b/trigger.yml
@@ -13,6 +13,7 @@ fire:
           - roles
           - partner_type
           - entries
+          - trigger.credits_granted
       - if auth.authorized($roles,$partner_type):
           - let: $parameters
           - if "$triggered_url" == "":
@@ -21,5 +22,6 @@ fire:
               - $method: [$triggered_url,$parameters]
           - if $entries:
               - collection.update: [ trigger, $trigger, entry_count: /$entry_count+$entries]
+              - collection.insert: [promo_entry,"",trigger: $trigger,winner: $new_user_id,create_time: /now(),price: $credits_granted ]
               - if $entry_count+$entries >= $maximum_entries:
                   - collection.update: [ trigger, $trigger, active: 0]
