allow <br> to be parse as html on popup

--- a/popup.yml
+++ b/popup.yml
@@ -4,5 +4,6 @@ popup:
     - message:
         type: p
         class: [text-green, font-xlarge, pad pad-large]
+        attr: { parseHtml: br}
   modal:
     title_bar: ""
