--- a/controls.yml
+++ b/controls.yml
@@ -356,7 +356,11 @@ image:
   attr: {src: "$src"}
   text: ""
   src_type: png
-  src: $image_path/$id.$src_type
+  file_name: $id
+  file_ext: $src_type
+  file_dir: $image_path
+  file_path: $file_dir/$file_name.$file_ext
+  src: $file_path
 
 image_button:
   type: button
