--- a/app-config.yml
+++ b/app-config.yml
@@ -20,6 +20,7 @@ css:
 scripts:
   - /common/jquery/jquery-3.2.1.min.js
   - /common/jquery/jquery-ui-1.12.1/jquery-ui.min.js
+  - /common/enquire.min.js
   - /common/mukoni.jquery.js
   - /common/mkn.js
   - /common/mkn.render.js
