--- a/user.yml
+++ b/user.yml
@@ -144,7 +144,7 @@ confirm_registration:
   post:
     - read_config: [registrant_partner, registrant_role]
     - read_session: title,first_name,last_name,cellphone,email,password,registrant_partner
-    # - collection.values: [partner, name: $registrant_partner, partner: id]
+    - collection.values: [partner, name: $registrant_partner, partner: id]
     - if $partner == '':
         - collection.insert: [partner, name: $registrant_partner]
         - let: { partner: $new_partner_id }
