--- a/user.yml
+++ b/user.yml
@@ -480,7 +480,7 @@ login_password:
     - collection.exists(user,email,$email,password,/=password('$value'))
   error:
     - collection.values: [user, email: $email, user: id]
-    - collection.update: [user, $user, attempts: /value+1]
+    - collection.update: [user, $user, attempts: /attempts+1]
     - collection.insert: [audit, user, action: Failed Login attempt, time: /sysdate(), detail: $email]
     - error: [password, Invalid user name or password for $email ]
 
